<?xml version="1.0"?>
<package format="2">
  <name>usb_controller</name>
  <version>0.0.0</version>
  <description>The usb_controller package</description>

  <maintainer email="szlachcic49er@gmail.com">Piotr Szlachcic</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>teleop_twist_joy</build_export_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>


  <export>

  </export>
</package>
